# FLUX_Ascend

./: CMakeLists.txt  CMakePresets.json  README.md  setup.py
ascend_ops/: CMakeLists.txt
ascend_ops/host/: test_ops.cpp
ascend_ops/kernel/: test_ops.cpp
catlass_ops/: CMakeLists.txt  test_matmul_add.cpp
cmake/: func.cmake
include/: OpApiCommon.h  ascend_ops.h  common.h  utils.h
include/host/: test_ops_tiling.h
include/kernel/: test_matmul_add.h  test_ops.h
py_ops/: npu_test_gemm_add.py
src/: CMakeLists.txt  OpApiCommon.cpp  TestMatmulAdd.cpp  TestOps.cpp  pybind.cpp
